fix ec button flickering bug

--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,7 @@
     height: auto;
     margin: auto;
     border-radius: 0.375rem;
-
+    position: relative;
     display: flex;
     flex-direction: column;
     padding-left: 2rem;
